methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:68: error: not found: value déplace
  déplace()
  ^